--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,8 @@
 
 
 :root {
-  --alt-gray: rgb(228, 228, 228, .5);
-  --alt-black: rgb(19, 19, 19, .5);
+  --alt-gray: rgb(228, 228, 228, .6);
+  --alt-black: rgb(19, 19, 19, .6);
   --alt-red: #343500;
 }
 
@@ -32,6 +32,7 @@ nav {
   align-content: center;
   margin-bottom: 80px;
   border-bottom: .2px solid rgb(226, 224, 224);
+  background-color: #fff;
 }
 
 /* Grid items */
@@ -100,7 +101,7 @@ nav i {
 
 @media (min-width: 768px) {
   nav {
-    grid-template-columns: auto 2fr 1fr;
+    grid-template-columns: auto 10fr 1fr;
     grid-template-areas:
       "logo top-nav top-nav"
       "logo article-nav icons";
@@ -140,7 +141,9 @@ main {
   margin-top: 100px;
 }
 
-.logo { width: 40px;}
+h1 {
+  width: 50%;
+}  
 
 h2 {
   font-size: 28px;
@@ -172,6 +175,7 @@ h3 {
 }
 
 .top-stories h3 {
+  z-index: 2;
   margin-bottom: .25em;
   font-size: 22px;
   font-weight: bold;
@@ -179,15 +183,37 @@ h3 {
 }
 
 .top-stories p {
+  z-index: 2;
   font-size: 12px;
 }
 
+.top-stories i {
+  padding: 0 3px 0 5px;
+}
+
 .top-story-left {
+  position: relative;
   background-image: linear-gradient(to bottom, var(--alt-gray), var(--alt-black)), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/11/china-market-consumers-gq-796x417.png");
+}
+
+.gradient {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to right bottom, rgba(248, 62, 78, 0.45) 20%, rgba(255, 67, 10, 0.45) 60%, transparent);
 }
 
 .logo-and-date {
   display: none;
+  position: absolute;
+  width: 95%;
+  padding: 20px;
+  font-size: 14px;
+}
+
+.logo-and-date p {
+  font-size: 14px;
 }
 
 .top-story-top {
@@ -204,7 +230,7 @@ h3 {
   }
 
   .top-story-left h3 {
-    font-size: 30px;
+    font-size: 40px;
   }
 }
 
@@ -213,9 +239,23 @@ h3 {
     min-height: 16.5rem;
   }
 
+  .top-story-left h3 {
+    font-size: 50px;
+  }
+
+  .top-stories-right h3 {
+    font-size: 30px;
+  }
+
   .logo-and-date {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .gradient {
     display: block;
   }
+
 }
 
 .latest-news figure,
