--- a/styles/style.css
+++ b/styles/style.css
@@ -6,9 +6,7 @@
 
 
 :root {
-  --alt-gray: rgb(228, 228, 228, .6);
-  --alt-black: rgb(19, 19, 19, .6);
-  --alt-red: #343500;
+  --alt-gray: rgb(228, 228, 228, .2);
 }
 
 body {
@@ -20,14 +18,17 @@ img {
   width: 100%; 
 }
 
+.fas {
+  padding: 0 7px;
+}
+
 /* Grid container */
 nav {
   position: fixed;
   top: 0;
   z-index: 10;
   width: 100%;
-  display: grid;
-  grid-template-areas: "logo icons";
+  display: gridgrid-template-areas: "logo icons";
   justify-content: space-between;
   align-content: center;
   margin-bottom: 80px;
@@ -93,10 +94,6 @@ nav li {
   padding: 7px;
 }
 
-nav i {
-  padding: 0 7px;
-}
-
 /* Navbar media queries */
 
 @media (min-width: 768px) {
@@ -146,6 +143,7 @@ h1 {
 }  
 
 h2 {
+  margin: 10px 0;
   font-size: 28px;
   font-weight: 700;
   color: #f42;
@@ -157,32 +155,40 @@ h2:hover {
 
 h3 {
   font-weight: 700;
+  line-height: 1.2;
 }
 
-.top-stories {
+p {
+  line-height: 1.5;
+}
+
+.top-stories,
+.section-cntnr {
   display: grid;
   grid-gap: 10px;
 }
 
 .top-story {
+  min-height: 30vh;
+}
+
+.img-txt-container {
   display: grid;
   align-content: end;
-  min-height: 30vh;
   padding: 8px;
   color: #fff;
   background-position: center;
   background-size: cover;
 }
 
-.top-stories h3 {
+.img-txt-container h3 {
   z-index: 2;
   margin-bottom: .25em;
   font-size: 22px;
-  font-weight: bold;
   line-height: 1;
 }
 
-.top-stories p {
+.img-txt-container p {
   z-index: 2;
   font-size: 12px;
 }
@@ -193,7 +199,7 @@ h3 {
 
 .top-story-left {
   position: relative;
-  background-image: linear-gradient(to bottom, var(--alt-gray), var(--alt-black)), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/11/china-market-consumers-gq-796x417.png");
+  background-image: linear-gradient(to bottom, var(--alt-gray), #000), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/11/china-market-consumers-gq-796x417.png");
 }
 
 .gradient {
@@ -217,11 +223,11 @@ h3 {
 }
 
 .top-story-top {
-  background-image: linear-gradient(to bottom, var(--alt-gray), var(--alt-black)), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/netflix-feat-796x417.png");
+  background-image: linear-gradient(to bottom, var(--alt-gray), #000), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/netflix-feat-796x417.png");
 }
 
 .top-story-btm {
-  background-image: linear-gradient(to bottom, var(--alt-gray), var(--alt-black)), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/Untitled-design-2020-11-11T104744.768-796x417.png");
+  background-image: linear-gradient(to bottom, var(--alt-gray), #000), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/Untitled-design-2020-11-11T104744.768-796x417.png");
 }
 
 @media (min-width: 768px) {
@@ -236,7 +242,7 @@ h3 {
 
 @media (min-width: 1024px) {
   .top-story {
-    min-height: 16.5rem;
+    min-height: 13.5rem;
   }
 
   .top-story-left h3 {
@@ -255,72 +261,221 @@ h3 {
   .gradient {
     display: block;
   }
-
 }
 
-.latest-news figure,
-.deals figure {
-  display: flex;
-  margin: 10px 0;
-}
-
-.latest-news,
-.deals {
+.news-deals {
   grid-template-columns: repeat(auto-fill, minmax(235px, 1fr));
   grid-gap: 10px;
-  margin: 20px 0;
+  margin: 50px 0;
 }
 
-.latest-news img,
-.deals img {
-  width: 75px;
+.news-deals figure {
+  display: flex;
+  margin: 15px 0;
 }
+
+.news-deals img {
+  object-fit: cover;
+  height: 75px;
+  width: 75px;
+  padding-right: 10px;
+}
+
+.news-deals h3 {
+  color: #000;
+  font-size: 16px;
+}
+
+.news-deals p {
+  font-size: 13px;
+  font-weight: 200px;
+  color: #aaa;
+}
+
 
 @media (min-width: 768px) {
-  .latest-news, 
-  .latest-news figure,
-  .deals,
-  .deals figure {
+  .news-deals, 
+  .news-deals figure {
     display: grid;
-    grid-gap: 10px;
+    grid-gap: 15px;
     justify-content: space-between;
+    align-content: start;
   }
 
-  .latest-news h2 {
-    grid-column: 1 / -1;
-  }
+  .latest-news h2,
+  .deals-heading { grid-column: 1 / -1; }
 
-  .latest-news img,
-  .deals img {
+  .news-deals img {
     width: 100%;
+    height: 145px;
+    padding: 0;
   }
 }
 
-.funding,
-.section-cntnr {
-  display: grid;
-  grid-gap: 10px;
+@media (min-width: 1024px) {
+  .news-deals { margin: 50px 100px; }
 }
 
 .funding {
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  margin-bottom: 50px;
 }
 
-.funding-hdr {
-  grid-column: 1 / -1;
+.funded {
+  position: relative;
+  color: #000;
+  background-color: rgba(125, 85, 78, 0.08);
+}
+
+.funded img {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 60px;
+  height: 60px;
+}
+
+.funded-hdr {
+  text-align: center;
+  background-color: rgba(255, 68, 34, .08); 
+}
+
+.funded h3 {
+  padding: 10px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #f42;
+}
+
+.amount {
+  padding-top: 8px;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.funding-round {
+  padding-bottom: 8px;
+  opacity: .5;
+  font-size: 12px;
+}
+
+.funding-deets,
+.funding-btm {
+  padding: 10px 15px;
+  color: #555;
+  font-size: 14px;
+}
+
+.funding-deets {
+  border-bottom: .5px solid rgb(255, 68, 34, .3);
+}
+
+.funding-deets .fas {
+  color: #000;
+  line-height: 2;
+}
+
+.site-credit {
+  opacity: .5;
+}
+
+@media (min-width: 768px) {
+  .funding {
+    display: grid;
+    grid-gap: 10px;
+  }
+
+  .funding {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  }
+
+  .funding-hdr {
+    grid-column: 1 / -1;
+    grid-row: 1;
+    color: #f42;
+  }
+
+  .funding-hdr p {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 0 10px;
+    border-left: 1px solid #f42;
+  }
+
+  .funding-hdr p:first-of-type {
+    padding-left: 0;
+    border: none;
+  }
+}
+
+@media (min-width: 1024px) {
+  .funding-hdr {
+    grid-column: 1 / -1;
+    display: grid;
+    grid-template-columns: 1fr auto auto auto;
+  }
+
+  .funding-hdr p {
+    justify-self: end;
+    align-self: center;
+    margin: 0;
+  }
 }
 
 .section-cntnr {
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 
+.topic-grid {
+  display: grid;
+  grid-template-rows: 3fr 1fr repeat(5, auto);
+}
+
+.section1 {
+  background-image: linear-gradient(to bottom, var(--alt-gray), #000), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/11/covidvaccine-368x276.jpg");
+}
+
+.section2 {
+  background-image: linear-gradient(to bottom, var(--alt-gray), #000), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/07/tencent-480x270.jpg");
+}
+
+.section3 {
+  background-image: linear-gradient(to bottom, var(--alt-gray), #000), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/netflix-feat-796x417.png");
+}
+
+.section4 {
+  background-image: linear-gradient(to bottom, var(--alt-gray), #000), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/11/emotion-emoji-gq-368x276.png");;
+}
+
+.section5 {
+  background-image: linear-gradient(to bottom, var(--alt-gray), #000), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/09/Untitled-design-13-368x276.jpg");
+}
+
+.section6 {
+  background-image: linear-gradient(to bottom, var(--alt-gray), #000), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/google-logo-podium-368x276.png");
+}
+
+.under-story {
+  display: grid;
+  column-gap: 10px;
+  grid-template: 30px 66px / 4fr 1fr;
+  padding-left: 10px;
+  color: #f42;
+  font-size: 14px;
+  background-color: rgba(255, 68, 34, .08);
+}
+
+.under-story p {
+  align-self: end;
+}
+
+.under-story img {
+  justify-self: end;
+  width: 96px;
+  height: 96px;
+  object-fit: cover;
+}
+
 .deals-heading {
   display: flex;
   justify-content: space-between;
-}
-
-@media (min-width: 768px) {
-  .deals-heading {
-    grid-column: 1 / -1;
-  }
 }
